--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "workbox-webpack-plugin": "^3.6.3"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.2.5",
     "phaser": "^3.15.1"
   }
 }
