--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
     "html-webpack-plugin": "^3.2.0",
-    "imagemin-webpack-plugin": "^2.4.0",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
+    "imagemin-webpack-plugin": "^2.4.1",
+    "webpack": "^4.29.2",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.2.1",
     "webpack-obfuscator": "^0.18.0",
@@ -44,6 +44,6 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
-    "phaser": "^3.16.0-rc2"
+    "phaser": "^3.16.1"
   }
 }
