--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "copy-webpack-plugin": "^4.6.0",
     "html-webpack-plugin": "^3.2.0",
     "imagemin-webpack-plugin": "^2.4.1",
+    "typescript": "^3.3.3",
     "webpack": "^4.29.2",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14",
