Fixed links to icons

--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -3,12 +3,12 @@
   "name": "My Cool Phaser 3 Game",
   "icons": [
     {
-      "src": "./assets/icons/icons-192.png",
+      "src": "./icons/icons-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "./assets/icons/icons-512.png",
+      "src": "./icons/icons-512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
