--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "url": "https://github.com/yandeu/phaser-project-template-es6",
     "author": "Yannick Deubel (https://github.com/yandeu)"
   },
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.3.4",
